networkpolicy-isolated.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: isolated-policy
  annotations:
    configmanagement.gke.io/namespace-selector: network-isolated-selector
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    - ipBlock:
        cidr: 35.191.0.0/16 # Load balancer health check probe source IP range 
  egress:
  - {}
